client/src/app/receiver/receiver.component.css
#filters {
    transition: all 1s ease;
    position: fixed;
    z-index: 100;
    padding-right: 0px;
    word-wrap: break-word;
}

#filters-button {
    position: absolute;
    width: 37px;
    right: -37px;
    top:0;
    background: darkgray;
    opacity: 0;
    cursor: pointer;
    cursor: hand;
    visibility: hidden;
    -webkit-transition: 0.5s ease;
    -moz-transition: 0.5s ease;
    -o-transition: 0.5s ease;
    -ms-transition: 0.5s ease;
    transition: 0.5s ease;
    color: white;
    font-weight: bolder;
    z-index: 101;
}

#filters-button:hover {
    background: black;
}

@media only screen and (max-width: 1200px) {
    #filters {
        right: 100%;
        background: white;
        width: 100%;
        max-width: 400px;
    }

    #filters-button {
        visibility: visible;
        opacity: 0.67;
    }
}

